uix ports loading complete

--- a/uix/templates/project.html
+++ b/uix/templates/project.html
@@ -1,4 +1,4 @@
-<h2>Project Tab Content</h2>
+<h2>Project Configurations</h2>
 
 <!-- Form to input project directory manually -->
 <form id="projectDirectoryForm" onsubmit="return false;">
