uix segment loading almost complete. (Issues with Bridge/Arm selection when loading from file)

--- a/uix/templates/artwork.html
+++ b/uix/templates/artwork.html
@@ -12,7 +12,7 @@
     <h3>Segment Designer</h3>
     <div>
         <label for="segmentsJsonPath">JSON File Path:</label>
-        <input type="text" id="segmentJsonPath" placeholder="Enter path to JSON file">
+        <input type="text" id="segmentsJsonPath" placeholder="Enter path to JSON file">
         <button onclick="loadSegments()">Load JSON</button>
     </div>
     <div style="overflow-x: auto;">
