uix redundant second port when porty type is single in the arms table

--- a/uix/templates/artwork.html
+++ b/uix/templates/artwork.html
@@ -54,6 +54,7 @@
                     <th>Length</th>
                     <th>Width</th>
                     <th>Port</th>
+                    <th>Port 2</th>
                     <th>Layer</th>
                     <th>Via Stack</th>
                     <th>Action</th>
