spacing parameter added in arms which was earlier left out. Fixed several other bugs.

--- a/uix/templates/artwork.html
+++ b/uix/templates/artwork.html
@@ -53,6 +53,7 @@
                     <th>Type</th>
                     <th>Length</th>
                     <th>Width</th>
+                    <th>Spacing</th>
                     <th>Port</th>
                     <th>Port 2</th>
                     <th>Layer</th>
