uix improved path handling in funcitons. Start uix using single shell command --startUIX.sh--. Workspace is defined by user in the uix. Included conure logo.

--- a/uix/templates/artwork.html
+++ b/uix/templates/artwork.html
@@ -302,14 +302,14 @@
 </div>
 
 <!-- Correctly include scripts with src attribute (ORDER IS IMPORTANT) -->
-<script src="/static/script_base.js"></script>
-<script src="/static/script_global.js"></script>
-<script src="/static/script_util.js"></script>
-<script src="/static/script_layers.js"></script>
-<script src="/static/script_via.js"></script>
-<script src="/static/script_viaPadStack.js"></script>
-<script src="/static/script_bridges.js"></script>
-<script src="/static/script_ports.js"></script>
-<script src="/static/script_arms.js"></script>
-<script src="/static/script_segments.js"></script>
-<script src="/static/script_artwork.js"></script>
+<script src="/static/js/script_base.js"></script>
+<script src="/static/js/script_global.js"></script>
+<script src="/static/js/script_util.js"></script>
+<script src="/static/js/script_layers.js"></script>
+<script src="/static/js/script_via.js"></script>
+<script src="/static/js/script_viaPadStack.js"></script>
+<script src="/static/js/script_bridges.js"></script>
+<script src="/static/js/script_ports.js"></script>
+<script src="/static/js/script_arms.js"></script>
+<script src="/static/js/script_segments.js"></script>
+<script src="/static/js/script_artwork.js"></script>
