--- a/uix/templates/base.html
+++ b/uix/templates/base.html
@@ -24,6 +24,10 @@
 </head>
 
 <body>
+    <div id="header">
+        <img id="conureLogo" src="static/images/logo/logo_nb_large.png" alt="Conure Image" style="width:100px;height:auto;">
+    </div>
+
 
     <div id="tabs">
         <button id="btn-sel-project" onclick="showTab('project')">Project</button>
