--- a/uix/templates/project.html
+++ b/uix/templates/project.html
@@ -13,4 +13,4 @@
 </div>
 
 <!-- Correctly include project_layers.js with src attribute -->
-<script src="/static/script_project.js"></script>
+<script src="/static/js/script_project.js"></script>
