uix added favicon

--- a/uix/templates/base.html
+++ b/uix/templates/base.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-    <title>{% block title %}SPA Example{% endblock %}</title>
+    <title>{% block title %}Conure{% endblock %}</title>
+    <link rel="icon" href="static/images/favicon/conure.ico/favicon.ico" type="image/x-icon">
+
     <style>
         /* Add your CSS styles here */
         .tab-content {
