--- a/uix/templates/index.html
+++ b/uix/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}SPA Example{% endblock %}
+{% block title %}Conure{% endblock %}
 
 {% block content %}
 <div id="project" class="tab-content active">
