--- a/uix/templates/index.html
+++ b/uix/templates/index.html
@@ -10,6 +10,10 @@
     {% include 'artwork.html' %}
 </div>
 
+<div id="simulate" class="tab-content">
+    {% include 'simulate.html' %}
+</div>
+
 <div id="sweep" class="tab-content">
     {% include 'sweep.html' %}
 </div>
