--- a/uix/templates/artwork.html
+++ b/uix/templates/artwork.html
@@ -42,11 +42,11 @@
 
 <div id="segment" class="sub-tab-content" style="display: none;">
     <h3>Segment Designer</h3>
-    <div>
+    <!-- <div>
         <label for="segmentsJsonPath">JSON File Path:</label>
         <input type="text" id="segmentsJsonPath" placeholder="Enter path to JSON file">
         <button onclick="loadSegments()">Load JSON</button>
-    </div>
+    </div> -->
     <div style="overflow-x: auto;">
         <label for="numRings">No. of Rings:</label>
         <input type="number" id="numRings" value="" min="1" onchange="generateSegmentTables()">
@@ -54,13 +54,13 @@
             <!-- Tables will be dynamically generated here -->
         </div>
 
-        <div>
+        <!-- <div>
             <label for="segmentsSavePath">Save JSON File Path:</label>
             <input type="text" id="segmentsSavePath" placeholder="Enter path to save JSON file">
             <label for="segmentsSaveName">File Name:</label>
             <input type="text" id="segmentsSaveName" placeholder="Enter file name">
             <button onclick="saveSegments()">Save</button>
-        </div>
+        </div> -->
 
 
     </div>
@@ -71,11 +71,11 @@
 <div id="arms" class="sub-tab-content" style="display: none;">
     <h3>Arms Designer</h3>
     <!-- Add content specific to Arms sub-tab -->
-    <div>
+    <!-- <div>
         <label for="armsJsonPath">JSON File Path:</label>
         <input type="text" id="armsJsonPath" placeholder="Enter path to JSON file">
         <button onclick="loadArms()">Load JSON</button>
-    </div>
+    </div> -->
 
     <div style="overflow-x: auto;">
         <table id="armsTable">
@@ -98,13 +98,13 @@
             </tbody>
         </table>
         <button onclick="addArmRow()">Add Row</button>
-        <div>
+        <!-- <div>
             <label for="armsSavePath">Save JSON File Path:</label>
             <input type="text" id="armsSavePath" placeholder="Enter path to save JSON file">
             <label for="armsSaveName">File Name:</label>
             <input type="text" id="armsSaveName" placeholder="Enter file name">
             <button onclick="saveArms()">Save</button>
-        </div>
+        </div> -->
     </div>
 </div>
 
@@ -114,11 +114,11 @@
     <!-- Add content specific to Ports sub-tab -->
     <div>
         <h4>Load Ports Data</h4>
-        <div>
+        <!-- <div>
             <label for="portsJsonPath">JSON File Path:</label>
             <input type="text" id="portsJsonPath" placeholder="Enter path to JSON file">
             <button onclick="loadPorts()">Load JSON</button>
-        </div>
+        </div> -->
     </div>
     <div>
         <!-- Content specific to Ports sub-tab -->
@@ -164,24 +164,24 @@
     <div>
         <h4>Save Ports Data</h4>
 
-        <div>
+        <!-- <div>
             <label for="portsSavePath">Save JSON File Path:</label>
             <input type="text" id="portsSavePath" placeholder="Enter path to save JSON file">
             <label for="portsSaveName">File Name:</label>
             <input type="text" id="portsSaveName" placeholder="Enter file name">
             <button onclick="savePorts()">Save</button>
-        </div>
+        </div> -->
     </div>
 </div>
 
 <div id="bridges" class="sub-tab-content" style="display: none;">
     <h3>Bridges Designer</h3>
     <!-- Add content specific to Bridges sub-tab -->
-    <div>
+    <!-- <div>
         <label for="bridgeJsonPath">JSON File Path:</label>
         <input type="text" id="bridgeJsonPath" placeholder="Enter path to JSON file">
         <button onclick="loadBridges()">Load JSON</button>
-    </div>
+    </div> -->
     <div style="overflow-x: auto;">
         <table id="bridgesTable">
             <thead>
@@ -200,24 +200,24 @@
             </tbody>
         </table>
         <button onclick="addBridgeRow()">Add Row</button>
-        <div>
+        <!-- <div>
             <label for="bridgeSavePath">Save JSON File Path:</label>
             <input type="text" id="bridgeSavePath" placeholder="Enter path to save JSON file">
             <label for="bridgeSaveName">File Name:</label>
             <input type="text" id="bridgeSaveName" placeholder="Enter file name">
             <button onclick="saveBridges()">Save</button>
-        </div>
+        </div> -->
     </div>
 </div>
 
 <div id="viaPadStack" class="sub-tab-content" style="display: none;">
     <h3>Via Pad-Stack Designer</h3>
     <!-- Add content specific to ViaPadStack sub-tab -->
-    <div>
+    <!-- <div>
         <label for="viaPadStackJsonPath">JSON File Path:</label>
         <input type="text" id="viaPadStackJsonPath" placeholder="Enter path to JSON file">
         <button onclick="loadViaPadStack()">Load JSON</button>
-    </div>
+    </div> -->
 
     <div style="overflow-x: auto;">
         <table id="viaPadStackTable">
@@ -236,24 +236,24 @@
             </tbody>
         </table>
         <button onclick="addViaPadStackRow()">Add Row</button>
-        <div>
+        <!-- <div>
             <label for="viaPadStackSavePath">Save JSON File Path:</label>
             <input type="text" id="viaPadStackSavePath" placeholder="Enter path to save JSON file">
             <label for="viaPadStackSaveName">File Name:</label>
             <input type="text" id="viaPadStackSaveName" placeholder="Enter file name">
             <button onclick="saveViaPadStack()">Save</button>
-        </div>
+        </div> -->
     </div>
 </div>
 
 <div id="via" class="sub-tab-content" style="display: none;">
     <h3>Via Designer</h3>
 
-    <div>
+    <!-- <div>
         <label for="viaJsonPath">JSON File Path:</label>
         <input type="text" id="viaJsonPath" placeholder="Enter path to JSON file">
         <button onclick="loadVia()">Load JSON</button>
-    </div>
+    </div> -->
 
     <div style="overflow-x: auto;">
         <table id="viaTable">
@@ -273,13 +273,13 @@
             </tbody>
         </table>
         <button onclick="addViaRow()">Add Row</button>
-        <div>
+        <!-- <div>
             <label for="viaSavePath">Save JSON File Path:</label>
             <input type="text" id="viaSavePath" placeholder="Enter path to save JSON file">
             <label for="viaSaveName">File Name:</label>
             <input type="text" id="viaSaveName" placeholder="Enter file name">
             <button onclick="saveVia()">Save</button>
-        </div>
+        </div> -->
     </div>
 </div>
 
@@ -291,11 +291,11 @@
 <div id="layers" class="sub-tab-content">
     <h3>Layer Configuration</h3>
 
-    <div>
+    <!-- <div>
         <label for="layerJsonPath">JSON File Path:</label>
         <input type="text" id="layerJsonPath" placeholder="Enter path to JSON file">
         <button onclick="loadLayers()">Load JSON</button>
-    </div>
+    </div> -->
 
     <div style="overflow-x: auto;">
         <table id="layersTable">
@@ -312,13 +312,13 @@
             </tbody>
         </table>
         <button onclick="addLayerRow()">Add Row</button>
-        <div>
+        <!-- <div>
             <label for="savePath">Save JSON File Path:</label>
             <input type="text" id="savePath" placeholder="Enter path to save JSON file">
             <label for="saveName">File Name:</label>
             <input type="text" id="saveName" placeholder="Enter file name">
             <button onclick="saveLayers()">Save</button>
-        </div>
+        </div> -->
     </div>
 </div>
 
