uix artwork tabs update method call is now organized

--- a/uix/templates/base.html
+++ b/uix/templates/base.html
@@ -70,7 +70,7 @@
         document.addEventListener('DOMContentLoaded', function () {
 
             showTab('project'); // Show project tab by default
-            updateTabsAvailability(); // Update tabs after deleting row
+            updateArtworkTabsAvailability(); // Update tabs after deleting row
         });
 
 
