--- a/uix/templates/base.html
+++ b/uix/templates/base.html
@@ -28,8 +28,17 @@
             /* Adjust the value as needed */
         }
 
+        #svg-preview {
+            max-width: 50%;
+            max-height: 500px;
+            /* Adjust this value as needed */
+            overflow: auto;
+        }
 
-        
+        #svg-preview svg {
+            width: 50%;
+            height: auto;
+        }
     </style>
 </head>
 
