uix segment field accessibility method updated

--- a/uix/templates/artwork.html
+++ b/uix/templates/artwork.html
@@ -38,7 +38,7 @@
 
 <div id="preview" class="sub-tab-content" style="display: none;">
     <h3>Preview</h3>
-    <button id="btn-sel-artwork-preview" onclick="preview()">Preview</button>
+    <button id="btn-sel-artwork-preview" onclick="preview()">Preview</button><br><br>
     <div id="svg-preview"></div>
 </div>
 
