uix removed unnecessary alerts

--- a/uix/templates/artwork.html
+++ b/uix/templates/artwork.html
@@ -8,7 +8,7 @@
 <button id="btn-sel-artwork-guardRing" onclick="showArtworkTab('guardRing')">GuardRing</button>
 <button id="btn-sel-artwork-layers" onclick="showArtworkTab('layers')">Layers</button> -->
 
-<button onclick="saveADF()">Save</button>
+<button onclick="saveADF()">Save ADF</button>
 
 <form id="ADFuploadAndLoadForm">
     <input type="file" id="fileInput" name="file" onchange="uploadAndLoadFromADF()"><br><br>
