--- a/uix/templates/project.html
+++ b/uix/templates/project.html
@@ -19,7 +19,7 @@
 
 
 
-<button onclick="createProjectAndName()">Save</button>
+<button onclick="createProjectAndName()">Set</button>
 
 <!-- Correctly include project_layers.js with src attribute -->
 <script src="/static/js/script_project.js"></script>
